Fixed issue with map shadow getting cut off.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@
 #content {
   overflow: hidden;
   position: relative;
+  padding: 5px;
 }
 
 /* Disabled button states */
